try prod like java gc settings